--- a/app/index.html
+++ b/app/index.html
@@ -2,9 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>stock chart</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">
+	<title>Stock chart</title>
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<style rel="stylesheet" type="text/css">
 		.temp_grey, .day_Name_grey{
 			color: #bababa !important;
@@ -27,12 +26,32 @@
 		.tab_padding-0{
 			padding: 0 !important;
 		}
+
+		ul {
+		    list-style-type: none;
+	        border: 1px solid #ccc;
+			border-radius: 0 0 5px 5px;
+			padding-left: 0;
+		    overflow-y: scroll;
+			max-height: 200px;
+		}
+
+		input, ul li{
+			padding: 7px;
+			/*border-color: #ccc;*/
+			width: 100%;
+		}
+
+		ul li:hover{
+			background-color: #eee;
+			cursor: pointer;
+		}
 	</style>
 </head>
 <body>
 	<h1 class="text-center">Stock Exchange</h1>
 	<div class="container">
-		<div class="col-md-12" id="tabs">
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="tabs">
 			
 		</div>
 	</div>
