--- a/public/index.html
+++ b/public/index.html
@@ -19,13 +19,59 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Stock chart</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <style rel="stylesheet" type="text/css">
+      .temp_grey, .day_Name_grey{
+        color: #bababa !important;
+        margin: 10px 0 0px;
+      }
+      p{
+          font-family: arial,sans-serif;
+          color: #878787 !important;
+          font-size: 12px;
+      }
+      #tabs>div{
+        padding: 2px;
+      }
+      #tabs>div>div>div>div>div:hover{
+        background-color: #fcfcfc;
+        border: 1px solid #e9e9e9;
+        border-radius: 1px;
+        margin: 0;
+      }
+      .tab_padding-0{
+        padding: 0 !important;
+      }
+
+      ul {
+          list-style-type: none;
+            border: 1px solid #ccc;
+        border-radius: 0 0 5px 5px;
+        padding-left: 0;
+          overflow-y: scroll;
+        max-height: 200px;
+      }
+
+      input, ul li{
+        padding: 7px;
+        /*border-color: #ccc;*/
+        width: 100%;
+      }
+
+      ul li:hover{
+        background-color: #eee;
+        cursor: pointer;
+      }
+    </style>
   </head>
   <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
-    <div id="root"></div>
+    <h1 class="text-center">Stock Exchange</h1>
+    <div class="container">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="root">
+        
+      </div>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
